--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
     "no-console": 0,
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "import/extensions": [0, { "js": "always" }],
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "no-prototype-builtins": 0,
+    "no-param-reassign": 0
   }
 }
