--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
     "import/extensions": [0, { "js": "always" }],
     "linebreak-style": 0,
     "no-prototype-builtins": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "spaced-comment": 0,
+    "eslint max-len": 0
   }
 }
